--- a/GymWare-Frontend/src/styles.css
+++ b/GymWare-Frontend/src/styles.css
@@ -1,5 +1,5 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body {
-    background-color: slateblue;
+    background-color: lightgray;
 }
