--- a/GymWare-Frontend/src/app/login/login.component.html
+++ b/GymWare-Frontend/src/app/login/login.component.html
@@ -16,7 +16,7 @@
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions class="button-login-container">
-      <button mat-raised-button mat-button class="button-login">Ingresar</button>
+      <button mat-raised-button mat-button class="button-login">INGRESAR</button>
     </mat-card-actions>
   </mat-card>
 </div>
