--- a/GymWare-Frontend/src/app/footer/footer.component.html
+++ b/GymWare-Frontend/src/app/footer/footer.component.html
@@ -1,6 +1,5 @@
 <section id="footer">
-		<div class="container">
-			<div class="row text-center text-xs-center text-sm-left text-md-left">
+			<div class="row text-center text-xs-center text-sm-center text-md-center">
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<h5>Administración</h5>
 					<ul class="list-unstyled quick-links">
@@ -41,5 +40,4 @@
 				</div>
 				<hr>
 			</div>	
-		</div>
 	</section>
