--- a/GymWare-Frontend/src/app/alta-ejercicio/alta-ejercicio.component.html
+++ b/GymWare-Frontend/src/app/alta-ejercicio/alta-ejercicio.component.html
@@ -1,8 +1,6 @@
-<mat-card>
-    <mat-card-title>
+
       <label>Alta Ejercicio</label>
-    </mat-card-title>
-    <mat-card-content>
+   
         <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate> 
         <div class="form-container">
           <mat-form-field>
@@ -10,9 +8,8 @@
           </mat-form-field>
           <div class="button-row">
             <button mat-raised-button color="primary" type="submit">Guardar</button>
-            <button mat-raised-button color="warn">Cancelar</button>
+            <button mat-raised-button mat-dialog-close color="warn">Cancelar</button>
           </div>
         </div>
       </form>
-    </mat-card-content>
-</mat-card>
+
