--- a/GymWare-Frontend/src/app/header/header.component.html
+++ b/GymWare-Frontend/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark custom-header">
+  <a class="navbar-brand header-title" href="/default">
     <i class="fas fa-dumbbell header-icon"></i>GymWare</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
           Gimnasio
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Ejercicios</a>
+          <a class="dropdown-item" href="/ejercicios">Ejercicios</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Rutinas</a>
           <div class="dropdown-divider"></div>
