--- a/GymWare-Frontend/src/app/app.component.html
+++ b/GymWare-Frontend/src/app/app.component.html
@@ -1,4 +1,13 @@
-<div>
-    <router-outlet></router-outlet>
+<div class="body">
+    <div class="header">
+        <app-header></app-header>
+    </div>
+    <div class="center">
+        <div class="container ">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+    <div class="footer">
+        <app-footer></app-footer>
+    </div>
 </div>
-
