--- a/GymWare-Frontend/src/app/login/login.component.css
+++ b/GymWare-Frontend/src/app/login/login.component.css
@@ -1,5 +1,5 @@
 .button-login {
-    background-color: #343a40;
+    background-color: #252839 ;
     color: white;
     width: 60%;
 }
@@ -42,7 +42,7 @@
   }
 
   .toolbar-login {
-    background-color: #343a40;
+    background-color: #252839 ;
     margin-bottom: 3%;
     color: white;
   }
