--- a/GymWare-Frontend/src/styles.css
+++ b/GymWare-Frontend/src/styles.css
@@ -1,5 +1,7 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
 
 body {
-    background-color: lightgray;
+    background-color: #677077;
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
 }
