--- a/GymWare-Frontend/src/app/abm-ejercicio/abm-ejercicio.component.html
+++ b/GymWare-Frontend/src/app/abm-ejercicio/abm-ejercicio.component.html
@@ -28,10 +28,10 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Acciones </th>
     <td mat-cell *matCellDef="let element">
       <button mat-mini-fab class="mr-3 btn-add">
-        <i class="material-icons">visibility</i>
+        <i class="material-icons" (click)="openDialogModification(element,false)">visibility</i>
       </button>
       <button mat-mini-fab color="primary" class="mr-3">
-        <i class="material-icons">edit</i>
+        <i class="material-icons" (click)="openDialogModification(element,true)">edit</i>
       </button>
       <button mat-mini-fab color="warn">
         <i class="material-icons" (click)="openDialogBaja(element.EjercicioId)">delete</i>
