--- a/GymWare-Frontend/src/app/header/header.component.html
+++ b/GymWare-Frontend/src/app/header/header.component.html
@@ -32,7 +32,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/ejercicios">Ejercicios</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Rutinas</a>
+          <a class="dropdown-item" href="/rutinas">Rutinas</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Productos</a>
           <div class="dropdown-divider"></div>
