--- a/GymWare-Frontend/src/app/alta-rutina/alta-rutina.component.html
+++ b/GymWare-Frontend/src/app/alta-rutina/alta-rutina.component.html
@@ -9,20 +9,22 @@
       <input matInput placeholder="Tipo" ngModel name="Tipo" />
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="EdadMin" type=number min="1" ngModel name="EdadMin" />
+      <input matInput placeholder="EdadMin" type=number min="1" ngModel name="EdadMinima" />
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="EdadMax" type=number min="1" max="1" ngModel name="EdadMax" />
+      <input matInput placeholder="EdadMax" type=number min="1" max="1" ngModel name="EdadMaxima" />
     </mat-form-field>
-    <!-- <mat-form-control>
-      <mat-radio-group ngModel name="Sexo">
-        <mat-radio-button value="Hombre">Hombre</mat-radio-button>
-        <mat-radio-button value="Mujer">Mujer</mat-radio-button>
-      </mat-radio-control>
-    </mat-form-field>
+
+      <!-- <mat-group-control> -->
+        <mat-radio-group ngModel name="Sexo">
+          <mat-radio-button value="Hombre">Hombre</mat-radio-button>
+          <mat-radio-button value="Mujer">Mujer</mat-radio-button>
+        </mat-radio-group>
+      <!-- </mat-group-control> -->
+
     <mat-form-field>
       <textarea matInput placeholder="Descripcion" ngModel name="Descripcion"></textarea>
-    </mat-form-field> -->
+    </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Guardar</button>
   </div>
 </form>
@@ -50,7 +52,7 @@
 
   <ng-container matColumnDef="EjercicioId">
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> ID </th>
-    <td mat-cell *matCellDef="let element"> {{element.ejercicio.Id}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.ejercicio.EjercicioId}} </td>
   </ng-container>
 
   <ng-container matColumnDef="Descripcion">
@@ -72,7 +74,7 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Acciones </th>
     <td mat-cell *matCellDef="let element">
       <button mat-mini-fab color="warn">
-        <i class="material-icons" (click)="removeEjercicio(element.ejercicio.Id)">delete</i>
+        <i class="material-icons" (click)="removeEjercicio(element.ejercicio.EjercicioId)">delete</i>
       </button>
     </td>
   </ng-container>
