--- a/GymWare-Frontend/src/app/amb-rutina/amb-rutina.component.html
+++ b/GymWare-Frontend/src/app/amb-rutina/amb-rutina.component.html
@@ -46,8 +46,8 @@
 
   <ng-container matColumnDef="add">
     <th mat-header-cell *matHeaderCellDef class="column-add">
-      <button mat-mini-fab color="primary">
-        <i class="material-icons" (click)="openDialogAlta()">add</i>
+      <button mat-mini-fab color="primary" (click)="openDialogAlta()">
+        <i class="material-icons">add</i>
       </button>
     </th>
     <td mat-cell *matCellDef="let element">
