--- a/GymWare-Frontend/src/app/edit-rutina/edit-rutina.component.html
+++ b/GymWare-Frontend/src/app/edit-rutina/edit-rutina.component.html
@@ -1,18 +1,26 @@
-<label>Alta Rutina</label>
+<ng-container *ngIf="enableEdit;else viewLabel">
+  <label>Editar Rutina</label>
+</ng-container>
+<ng-template #viewLabel>
+  <label>Ver Rutina</label>
+</ng-template>
 
 <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
   <div class="form-container">
     <mat-form-field>
-      <input matInput placeholder="Nombre" [disabled]="!enableEdit" ngModel name="Nombre" />
+      <input matInput placeholder="Nombre" [disabled]="!enableEdit" ngModel name="Nombre" [(ngModel)]="data.editedObject.Rutina.Nombre"/>
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="Tipo" [disabled]="!enableEdit" ngModel name="Tipo" />
+      <input matInput placeholder="Tipo" [disabled]="!enableEdit" ngModel name="Tipo" [(ngModel)]="data.editedObject.Rutina.Tipo"/>
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="EdadMin" [disabled]="!enableEdit" type=number min="1" ngModel name="EdadMin" />
+      <input matInput placeholder="Sexo" [disabled]="!enableEdit" ngModel name="Sexo" [(ngModel)]="data.editedObject.Rutina.Sexo"/>
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="EdadMax" [disabled]="!enableEdit" type=number min="1" max="1" ngModel name="EdadMax" />
+      <input matInput placeholder="EdadMin" [disabled]="!enableEdit" type=number min="1" ngModel name="EdadMinima" [(ngModel)]="data.editedObject.Rutina.EdadMinima"/>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="EdadMax" [disabled]="!enableEdit" type=number min="1" max="1" ngModel name="EdadMaxima" [(ngModel)]="data.editedObject.Rutina.EdadMaxima"/>
     </mat-form-field>
     <!-- <mat-form-control>
       <mat-radio-group ngModel name="Sexo">
@@ -50,7 +58,7 @@
 
   <ng-container matColumnDef="EjercicioId">
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> ID </th>
-    <td mat-cell *matCellDef="let element"> {{element.ejercicio.Id}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.ejercicio.EjercicioId}} </td>
   </ng-container>
 
   <ng-container matColumnDef="Descripcion">
@@ -71,7 +79,7 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Acciones </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-mini-fab color="warn" [hidden]="!enableEdit">
+      <button mat-mini-fab color="warn" >
         <i class="material-icons" (click)="removeEjercicio(element.ejercicio.Id)">delete</i>
       </button>
     </td>
