--- a/GymWare-Frontend/src/app/edit-rutina/edit-rutina.component.html
+++ b/GymWare-Frontend/src/app/edit-rutina/edit-rutina.component.html
@@ -80,7 +80,7 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Acciones </th>
     <td mat-cell *matCellDef="let element">
       <button mat-mini-fab color="warn" >
-        <i class="material-icons" (click)="removeEjercicio(element.ejercicio.Id)">delete</i>
+        <i class="material-icons" (click)="removeEjercicio(element.ejercicio.EjercicioId)">delete</i>
       </button>
     </td>
   </ng-container>
