--- a/GymWare-Frontend/src/app/header/header.component.html
+++ b/GymWare-Frontend/src/app/header/header.component.html
@@ -1,59 +1,76 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark custom-header">
-  <a class="navbar-brand header-title" href="/default">
-    <i class="fas fa-dumbbell header-icon"></i>GymWare</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item header-item">
-        <a class="nav-link" href="#">Inicio
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-      <li class="nav-item dropdown header-item">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          Administración
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Empleados</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Clientes</a>
+<div *ngIf="this.tipo == '1'">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark custom-header">
+        <a class="navbar-brand header-title" href="">
+          <i class="fas fa-dumbbell header-icon"></i>GymWare</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item header-item">
+              <a class="nav-link" href="/default">Inicio
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+              <li class="nav-item dropdown header-item">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Administración
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item">Empleados</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="/default/asistencia-cliente">Asistencia</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="/default/membresia-cliente">Membresía</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown header-item">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false">
+                  Gimnasio
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" [routerLink]="['/default/ejercicios']">Ejercicios</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" [routerLink]="['/default/rutinas']">Rutinas</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" [routerLink]="['/default/home']">Productos</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" [routerLink]="['/default/home']">Proveedores</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown header-item">
+                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false">
+                  Nutrición
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" [routerLink]="['/default/comidas']">Comidas</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" [routerLink]="['/default/dietas']">Dietas</a>
+                </div>
+              </li>
+          </ul>
         </div>
-      </li>
-      <li class="nav-item dropdown header-item">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          Gimnasio
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" [routerLink]="['/default/ejercicios']">Ejercicios</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" [routerLink]="['/default/rutinas']">Rutinas</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" [routerLink]="['/default/comidas']">Comidas</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" [routerLink]="['/default/dietas']">Dietas</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" [routerLink]="['/default/home']">Productos</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" [routerLink]="['/default/home']">Proveedores</a>
+      </nav>
+</div>
+<div *ngIf="this.tipo == '2'">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark custom-header">
+        <a class="navbar-brand header-title" href="">
+          <i class="fas fa-dumbbell header-icon"></i>GymWare</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item header-item">
+              <a class="nav-link" href="/default">Inicio
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+          </ul>
         </div>
-      </li>
-      <li class="nav-item dropdown header-item">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          Nutrición
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Comidas</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Dietas</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
+      </nav>
+</div>
