--- a/GymWare-Frontend/src/app/amb-rutina/amb-rutina.component.html
+++ b/GymWare-Frontend/src/app/amb-rutina/amb-rutina.component.html
@@ -16,15 +16,22 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Acciones </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-mini-fab class="mr-3 btn-add">
-        <i class="material-icons" (click)="openDialogModification(element,false)">visibility</i>
-      </button>
-      <button mat-mini-fab color="primary" class="mr-3">
-        <i class="material-icons" (click)="openDialogModification(element,true)">edit</i>
-      </button>
-      <button mat-mini-fab color="warn">
-        <i class="material-icons" (click)="openDialogBaja(element.Rutina.RutinaId)">delete</i>
-      </button>
+      <div *ngIf="onlyCheck;else abm_actions">
+        <button mat-mini-fab color="warn">
+          <i class="material-icons" (click)="selectRutina(element.Rutina)">check</i>
+        </button>
+      </div>
+      <ng-template #abm_actions>
+        <button mat-mini-fab class="mr-3 btn-add">
+          <i class="material-icons" (click)="openDialogModification(element,false)">visibility</i>
+        </button>
+        <button mat-mini-fab color="primary" class="mr-3">
+          <i class="material-icons" (click)="openDialogModification(element,true)">edit</i>
+        </button>
+        <button mat-mini-fab color="warn">
+          <i class="material-icons" (click)="openDialogBaja(element.Rutina.RutinaId)">delete</i>
+        </button>
+      </ng-template>
     </td>
   </ng-container>
 
