--- a/GymWare-Frontend/src/app/header/header.component.html
+++ b/GymWare-Frontend/src/app/header/header.component.html
@@ -38,6 +38,8 @@
                   <a class="dropdown-item" [routerLink]="['/default/home']">Productos</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" [routerLink]="['/default/home']">Proveedores</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" [routerLink]="['/default/rutina-cliente']">Rutinas para clientes</a>
                 </div>
               </li>
               <li class="nav-item dropdown header-item">
@@ -49,6 +51,8 @@
                   <a class="dropdown-item" [routerLink]="['/default/comidas']">Comidas</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" [routerLink]="['/default/dietas']">Dietas</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" [routerLink]="['/default/dieta-cliente']">Dietas para clientes</a>
                 </div>
               </li>
           </ul>
