--- a/GymWare-Frontend/src/app/header/header.component.html
+++ b/GymWare-Frontend/src/app/header/header.component.html
@@ -18,7 +18,7 @@
                   Administración
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item">Empleados</a>
+                  <a class="dropdown-item" href="/default/alta-cliente">Clientes</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="/default/asistencia-cliente">Asistencia</a>
                   <div class="dropdown-divider"></div>
