--- a/GymWare-Frontend/src/app/header/header.component.html
+++ b/GymWare-Frontend/src/app/header/header.component.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item header-item">
-              <a class="nav-link" href="/default">Inicio
+              <a class="nav-link"[routerLink]="['/default/home']">Inicio
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -18,11 +18,11 @@
                   Administración
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item">Empleados</a>
+                  <!-- <a class="dropdown-item">Empleados</a> -->
+                  <!-- <div class="dropdown-divider"></div> -->
+                  <a class="dropdown-item" [routerLink]="['/default/asistencia-cliente']">Asistencia</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="/default/asistencia-cliente">Asistencia</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="/default/membresia-cliente">Membresía</a>
+                  <a class="dropdown-item" [routerLink]="['/default/membresia-cliente']">Membresía</a>
                 </div>
               </li>
               <li class="nav-item dropdown header-item">
@@ -34,10 +34,10 @@
                   <a class="dropdown-item" [routerLink]="['/default/ejercicios']">Ejercicios</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" [routerLink]="['/default/rutinas']">Rutinas</a>
-                  <div class="dropdown-divider"></div>
+                  <!-- <div class="dropdown-divider"></div>
                   <a class="dropdown-item" [routerLink]="['/default/home']">Productos</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" [routerLink]="['/default/home']">Proveedores</a>
+                  <a class="dropdown-item" [routerLink]="['/default/home']">Proveedores</a> -->
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" [routerLink]="['/default/rutina-cliente']">Rutinas para clientes</a>
                 </div>
