claty estuvo aqui

--- a/GymWare-Frontend/src/app/alta-cliente/alta-cliente.component.html
+++ b/GymWare-Frontend/src/app/alta-cliente/alta-cliente.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div id="altaCliente" class="row">
   <div class="col-lg-12">
     <h2 class="title-memb">Alta cliente</h2>
   </div>
