--- a/GymWare-Frontend/src/app/center/center.component.html
+++ b/GymWare-Frontend/src/app/center/center.component.html
@@ -1,6 +1,6 @@
 <section id="center">
 		<div class="container">
-          &nbsp;
+          <!-- &nbsp;
           <br>
           &nbsp;
           &nbsp;
@@ -20,6 +20,6 @@
           &nbsp;
           <br>
           &nbsp;
-          &nbsp;
+          &nbsp; -->
     </div>
 </section>
