--- a/GymWare-Frontend/src/app/cliente-asistencia/cliente-asistencia.component.html
+++ b/GymWare-Frontend/src/app/cliente-asistencia/cliente-asistencia.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div id="asistencia" class="row">
   <div class="col-lg-12">
     <h1 class="title-asist">Control de Asistencia</h1>
   </div>
