--- a/GymWare-Frontend/src/app/membresia/membresia.component.html
+++ b/GymWare-Frontend/src/app/membresia/membresia.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div id="membresia" class="row">
   <div class="col-lg-12">
     <h2 class="title-memb">Control de Membresías</h2>
   </div>
