--- a/GymWare-Frontend/src/app/alta-cliente/alta-cliente.component.css
+++ b/GymWare-Frontend/src/app/alta-cliente/alta-cliente.component.css
@@ -12,3 +12,8 @@
     background-color: #252839;
     color: white;   
    }
+
+#altaCliente {
+    background-color: white;
+    padding-bottom: 50px;
+}
