--- a/GymWare-Frontend/src/app/amb-rutina/amb-rutina.component.html
+++ b/GymWare-Frontend/src/app/amb-rutina/amb-rutina.component.html
@@ -1,6 +1,7 @@
 <mat-form-field class="expanded filter-custom">
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
 </mat-form-field>
+<button class="pdf" (click)="print()">PDF</button>
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table table-custom">
 
   <ng-container matColumnDef="Nombre">
