--- a/GymWare-Frontend/src/app/default/default.component.css
+++ b/GymWare-Frontend/src/app/default/default.component.css
@@ -4,7 +4,7 @@
     height: 75%;
     position: absolute;
     padding-top: 20px;
-    background-image: url(../../assets/emotionheader4679144_4.jpg);
+    /*background-image: url(../../assets/emotionheader4679144_4.jpg);*/
 }
 .footer {
     bottom: 0;
