--- a/GymWare-Frontend/src/app/cliente/cliente.component.css
+++ b/GymWare-Frontend/src/app/cliente/cliente.component.css
@@ -13,3 +13,23 @@
 .card-progress {
     padding: 0;
 }
+.center {
+    background-color: white;
+    width: 100%;
+    height: 75%;
+    position: absolute;
+}
+.footer {
+    bottom: 0;
+    position: absolute;
+    height: 15%;
+    width: 100%;
+}
+.header {
+    top: 0;
+}
+.table-custom {
+    margin-top: 1%;
+    padding-left: 30px;
+    padding-right: 30px;
+}
