--- a/GymWare-Frontend/src/app/cliente/cliente.component.html
+++ b/GymWare-Frontend/src/app/cliente/cliente.component.html
@@ -1,37 +1,72 @@
-<div class="row">
-  <div class="col-lg-12">
-    <h2 class="text-center">Ficha personal de:
-      <strong>{{this.cliente.Nombre}} {{this.cliente.Apellido}}</strong>
-    </h2>
+<div class="body">
+  <div class="header">
+    <app-header></app-header>
   </div>
-  <div class="col-lg-6">
-    <h3 class="text-center">Asistencias
-      <small>última semana</small>
-    </h3>
-    <canvas baseChart [data]="barChartData" [labels]="barChartLabels" [chartType]="barChartType" [options]="barChartOptions"></canvas>
+  <div class="center">
+    <div class="row no-padding">
+      <div class="col-lg-12">
+        <h2 class="text-center">Ficha personal de:
+          <strong>{{this.cliente.Nombre}} {{this.cliente.Apellido}}</strong>
+        </h2>
+      </div>
+      <div class="col-lg-6">
+        <h3 class="text-center">Asistencias
+          <small>última semana</small>
+        </h3>
+        <canvas baseChart [data]="barChartData" [labels]="barChartLabels" [chartType]="barChartType" [options]="barChartOptions"></canvas>
+      </div>
+      <div class="col-lg-6">
+        <h3 class="text-center">Características
+          <small>evolución histórica</small>
+        </h3>
+        <div class="col-lg-6">
+          <div class="col-lg-6">
+            <mat-card class="card-cliente">Peso Inicial:
+              <strong>{{this.cliente.PesoInicial}}</strong> Kg</mat-card>
+          </div>
+          <div class="col-lg-6">
+            <mat-card class="card-cliente">Altura Inic.:
+              <strong>{{this.cliente.AlturaInicial}}</strong> cm</mat-card>
+          </div>
+          <div class="col-lg-6 card-cliente-container">
+            <mat-card class="card-cliente">Peso Actual:
+              <strong>{{this.cliente.PesoActual}}</strong> Kg</mat-card>
+          </div>
+          <div class="col-lg-6 card-cliente-container">
+            <mat-card class="card-cliente">Altura Act.:
+              <strong>{{this.cliente.AlturaActual}}</strong> cm</mat-card>
+          </div>
+          <div class="col-lg-12 card-cliente-container">
+            <mat-card class="text-center card-cliente card-progress">
+              <div class="div-progress text-center">
+                <strong>75%</strong>
+              </div>
+            </mat-card>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          </div>
+          <div class="col-lg-12 table-custom">
+              <h3 class="text-center"><small>Musculación</small></h3>
+              <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table">
+                    <ng-container matColumnDef="EjercicioId">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> ID </th>
+                      <td mat-cell *matCellDef="let element"> {{element.EjercicioId}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Descripcion">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Descripcion </th>
+                      <td mat-cell *matCellDef="let element"> {{element.Descripcion}} </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                  </table>
+                  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons class="paginator-custom"></mat-paginator>
+          </div>
+      </div>
+      
+    </div>
   </div>
-  <div class="col-lg-6">
-    <h3 class="text-center">Características
-      <small>evolución histórica</small>
-    </h3>
-    <div class="col-lg-6">
-      <mat-card class="card-cliente">Peso Inicial:
-        <strong>{{this.cliente.PesoInicial}}</strong> Kg</mat-card>
-    </div>
-    <div class="col-lg-6">
-      <mat-card class="card-cliente">Altura Inicial:
-        <strong>{{this.cliente.AlturaInicial}}</strong> cm</mat-card>
-    </div>
-    <div class="col-lg-6 card-cliente-container">
-      <mat-card class="card-cliente">Peso Actual:
-        <strong>{{this.cliente.PesoActual}}</strong> Kg</mat-card>
-    </div>
-    <div class="col-lg-6 card-cliente-container">
-      <mat-card class="card-cliente">Altura Actual:
-        <strong>{{this.cliente.AlturaActual}}</strong> cm</mat-card>
-    </div>
-    <div class="col-lg-12 card-cliente-container">
-      <mat-card class="text-center card-cliente card-progress"><div class="div-progress text-center"><strong>75%</strong></div></mat-card>
-    </div>
+  <div class="footer">
+    <app-footer></app-footer>
   </div>
 </div>
