--- a/GymWare-Frontend/src/app/header/header.component.html
+++ b/GymWare-Frontend/src/app/header/header.component.html
@@ -90,5 +90,15 @@
             </li>
           </ul>
         </div>
+        <div class="navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item header-item">
+                  <a class="nav-link" [routerLink]="['/login']" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    Cerrar sesión
+                  </a>
+              </li>
+          </ul>
+      </div>
       </nav>
 </div>
